# cardinal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cardinal/: configuration.h.in
